# graceful-DE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  gen-package.sh
app/common/: common.cmake  log.c  log.h  macros.h
app/compton/: CMakeLists.txt  README.md  c2.c  common.h  compton.c  compton.h  opengl.c  opengl.h  uthash.h  xrescheck.h
app/settings/: CMakeLists.txt  config.h  main.c  settings.c  settings.h
app/wm/: CMakeLists.txt  README.md  atoms.c  atoms.h  config.h  drw.c  drw.h  dwm.c  graceful-error.h  graceful-wm-app.c  graceful-wm-app.h  gwm-drawable.c  gwm-drawable.h  macro.h  patches.h  util.c
app/wm/patch/: attachx.c  bar_alpha.c  bar_awesomebar.c  bar_ewmhtags.c  bar_flexwintitle.c  bar_status2d.c  bar_statusbutton.c  bar_systray.c  bar_tagicons.h  focusfollowmouse.c  include.c  include.h  sortscreens.c  sortscreens.h  swapfocus.c  vanitygaps.c  vanitygaps.h  winview.c
data/: compton.conf  data.cmake  graceful-linux.desktop  graceful-run-rofi  start-graceful-linux
